hamburger menu alignment issue.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -79,7 +79,6 @@ h3 {
       align-items: center;
       width: 2rem;
       height: 2rem;
-      margin-right: 1rem;
       cursor: pointer;
       transition: all 0.5s ease-in-out;
       z-index: 10;
